--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -12,6 +12,12 @@
   <% end %>
 
   <div class="actions">
+    <%= form.label :title %>
+    <%= form.text_field :title %>
+
+    <%= form.label :content %>
+    <%= form.text_field :content %>
+
     <%= form.submit %>
   </div>
 <% end %>
