ユーザーページ遷移実装

--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -18,6 +18,9 @@
     <%= form.label :content %>
     <%= form.text_field :content %>
 
+    <%= form.label :content2 %>
+    <%= form.text_field :content2 %>
+
     <%= form.submit %>
   </div>
 <% end %>
