--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,8 @@
 
   <body>
     <% if user_signed_in? %>
-      <%= link_to "ブログ投稿", blogs_path %>
+      <%= link_to "ブログ一覧", blogs_path %>
+      <%= link_to "ユーザーページ", user_path(current_user.id) %>
       <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
     <% else %>
       <%= link_to "新規登録", new_user_registration_path %>
@@ -23,7 +24,7 @@
     <% if alert %>
       <p class="alert alert-error"><%= alert %></p>
     <% end %>
-    
+
     <%= yield %>
   </body>
 </html>
