--- a/app/views/users/edit.htnl.erb
+++ b/app/views/users/edit.htnl.erb
@@ -1,3 +1,3 @@
 <%= form_for @user,:url => {:action => 'update'}, :html => {:multipart => true} do |f| %>
-  <%= f.file_field :user_image %><br>
+  <%= f.file_field :image %><br>
 <% end %>
