--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,36 @@
-<h2>Sign up</h2>
+<div class="layerTransparent">
+  <div id="form-main">
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+        <div class="email">
+          <%= f.email_field :email, autofocus: true, autocomplete: "email",
+            class:"login validate[required,custom[email]] feedback-input",
+            id:"email", placeholder:"メールアドレス"
+          %>
+        </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+        <div class="login password">
+          <% if @minimum_password_length %>
+          <em>(<%= @minimum_password_length %> characters minimum)</em>
+          <% end %>
+          <%= f.password_field :password, autocomplete: "off",
+            class:"login validate[required,custom[onlyLetter],length[0,100]] feedback-input",
+            id:"password", placeholder:"パスワード"
+          %>
+        </div>
+
+        <div class="login password">
+          <%= f.password_field :password_confirmation, autocomplete: "off",
+            class:"login validate[required,custom[onlyLetter],length[0,100]] feedback-input",
+            id:"password", placeholder:"確認用パスワード"
+          %>
+        </div>
+
+        <div class="login submit">
+          <%= f.submit "サインイン", id:"button-green" %>
+          <div class="login ease"></div>
+        </div>
+    <% end %>
+    <%= render "devise/shared/links" %>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
