--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,32 +6,58 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link rel="stylesheet" href="css/reset.css">
   </head>
 
   <body>
-    <%= form_tag blogs_path, :method => 'get' do %> <%#　projects_pathはモデル名で読みかえること %>
-      <p>
-        <%= text_field_tag :search, params[:search] %>
-        <%= submit_tag "Search", :name => nil %>
-      </p>
-    <% end %>
-
-    <% if user_signed_in? %>
-      <%= link_to "ブログ一覧", blogs_path %>
-      <%= link_to "ユーザーページ", user_path(current_user.id) %>
-      <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
-    <% else %>
-      <%= link_to "新規登録", new_user_registration_path %>
-      <%= link_to "ログイン", new_user_session_path %>
-    <% end %>
-
     <% if notice %>
-      <p class="alert alert-notice"><%= notice %></p>
+      <div class="alert alert-success" role="alert">
+        <p class="notice"><%= notice %></p>
+      </div>
     <% end %>
     <% if alert %>
-      <p class="alert alert-error"><%= alert %></p>
+      <div class="alert alert-danger" role="alert">
+        <p class="notice"><%= alert %></p>
+      </div>
     <% end %>
 
+    <header class="header">
+      <h1>
+        <%= image_tag 'escola_logo.png' , class:"logo"%>
+      </h1>
+      <nav class="global-nav">
+        <ul>
+          <li class="nav-item active"><%= link_to "HOME", blogs_path %></li>
+          <li class="nav-item"><%= link_to '新規投稿', new_blog_path %></li>
+            <% if user_signed_in? %>
+              <li class="nav-item">
+                <%= link_to "マイページ", user_path(current_user.id) %>
+              </li>
+              <li class="nav-item">
+                <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+              </li>
+                <% else %>
+              <li class="nav-item">
+                <%= link_to "新規登録", new_user_registration_path %>
+              </li>
+              <li class="nav-item">
+                <%= link_to "ログイン", new_user_session_path %>
+              </li>
+            <% end %>
+        </ul>
+      </nav>
+    </header>
+
     <%= yield %>
+
+    <footer class="footer">
+      <ul class="horizontal-list">
+        <li class="horizontal-item"><a href="#">ABOUT ME</a></li>
+        <li class="horizontal-item"><a href="#">SITE MAP</a></li>
+        <li class="horizontal-item"><a href="#">SNS</a></li>
+        <li class="horizontal-item"><a href="#">CONTACT</a></li>
+      </ul>
+      <p class="copyright">Copyright © 2018 Escola</p>
+    </footer>
   </body>
 </html>
