--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -6,6 +6,9 @@
      * -------------------------------- */
     html {
       font-size: 62.5%;
+      background:#ddd url(blog_backgraund.jpg) no-repeat center center;
+      background-size:cover;
+      background-color:		rgba(255,255,255,0.5);
     }
     body {
       color: #333;
@@ -20,7 +23,20 @@
       text-decoration: none;
     }
 
-
+    /* --------------------------------
+     * logo
+     * -------------------------------- */
+    .logo{
+      width: 200px;
+      height: 150px;
+      background: url('escola_logo.png') no-repeat center;
+      margin: auto;
+      overflow: hidden;
+      display: block;
+    }
+    .logo:hover {
+      opacity: 0.5;
+    }
     /* --------------------------------
      * parts
      * -------------------------------- */
@@ -38,8 +54,6 @@
     .hidden {
       display: none;
     }
-
-
     /* --------------------------------
      * header
      * -------------------------------- */
@@ -48,16 +62,6 @@
       padding: 10px 0 10px;
       background-color: black;
     }
-    .logo {
-      width: 130px;
-      height: 56px;
-      margin: 0 auto;
-      text-indent: 100%;
-      white-space: nowrap;
-      overflow: hidden;
-      display: block;
-    }
-
     .global-nav {
       margin-top: 15px;
       text-align: center;
@@ -468,13 +472,11 @@
       margin-top: 12px;
     }
 
-
-
 /* --------------------------------
- * ログインタイトル
+ * login_title
  * -------------------------------- */
       .layerTransparent{
-        background:#ddd url(login_backgraund.jpg) no-repeat center center;
+        background:#ddd url(login_backgraund.jpg) no-repeat center;
         background-size:cover;
         background-color:		rgba(255,255,255,0.5);
       }
@@ -666,3 +668,58 @@
       text-align: center;
       letter-spacing: 1px;
     }
+
+/* --------------------------------
+ * toppage-abouts
+ * -------------------------------- */
+.abouts-wrapper {
+  display: table;
+  width: 80%;
+  margin: 50px auto 0;
+  table-layout: fixed;
+}
+.about-box {
+  float: left;
+  border-radius: 50%;
+  height: 350px;
+  width: 350px;
+  background-color: white;
+  margin: 10px;
+  opacity: 0.7;
+}
+.about-icon {
+  width: 150px;
+  height: 150px;
+  margin: 10px 0px 0px 100px;
+  font-size: 8rem;
+  line-height: 142px;
+
+  &.right{
+    background: url('school.png') no-repeat center;
+  }
+  &.center{
+    background: url('book.png') no-repeat center;
+  }
+  &.left{
+    background: url('connection.png') no-repeat center;
+  }
+}
+.about-title {
+  text-align: center;
+  margin: 0 20px 20px;
+  font-size: 2rem;
+}
+.about-text {
+  text-align: center;
+  line-height: 2;
+}
+.top {
+  padding: 80px 0 150px;
+}
+.heading {
+  text-align: center;
+  padding-bottom: 15px;
+  letter-spacing: 2px;
+  font-size: 4rem;
+  color: white;
+}
