--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -15,7 +15,7 @@
       <i class="about-icon center fa "></i>
       <div class="about-title">HOW TO USE</div>
       <p class="about-text">
-        学んだことを日記にすることで<br>
+        あなたが学んだことを日記にすることで<br>
         経験者や企業から<br>
         アドバイスやスカウトが来ます。
       </p>
