--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -268,44 +268,6 @@
       box-shadow: inset 0 0 20px 10px #b5d264;
     }
 
-.blog{
-    /* --------------------------------
-     * ribbon
-     * -------------------------------- */
-
-    .ribbon-wrap {
-      background-color: #f1f1f1;
-      color: #e91e63;
-      height: 300px;
-      margin: 30px;
-      padding-top: 30px;
-    }
-    .ribbon {
-      background-color: #f48fb1;
-      margin: 0 15px 0 -15px;
-      padding: 15px;
-      position: relative;
-      max-width: 640px;
-    }
-    .ribbon::before {
-      border: 15px solid transparent;
-      border-top-color: #f06292;
-      content: '';
-      left: 0;
-      position: absolute;
-      top: 100%;
-      z-index: -1;
-    }
-    .ribbon::after {
-      border-color: transparent #f1f1f1 transparent transparent;
-      border-style: solid;
-      border-width: 40px 25px 40px 0px;
-      content: '';
-      position: absolute;
-      right: 0;
-      top: 0;
-    }
-}
     /* --------------------------------
      * sidemenu
      * -------------------------------- */
@@ -631,44 +593,6 @@
       	}
       }
 
-    /* --------------------------------
-     * footer
-     * -------------------------------- */
-    .footer {
-      width: 100%;
-      padding: 20px 0 30px;
-      background: #2DA05D;
-      color: #fff;
-    }
-    .horizontal-list {
-      width: 970px;
-      margin: 0 auto;
-      text-align: right;
-      font-size: 0;
-    }
-    .horizontal-list .horizontal-item {
-      display: inline-block;
-      padding: 0 15px;
-      letter-spacing: 1px;
-    }
-    .horizontal-list .horizontal-item + .horizontal-item {
-      border-left: 1px solid #bbb;
-    }
-    .horizontal-list .horizontal-item a {
-      border-bottom: 1px dashed #777;
-      color: #bbb;
-      font-size: 1.1rem;
-      transition: color 0.15s;
-    }
-    .horizontal-list .horizontal-item a:hover {
-      color: #ddd;
-    }
-    .copyright {
-      margin-top: 30px;
-      text-align: center;
-      letter-spacing: 1px;
-    }
-
 /* --------------------------------
  * toppage-abouts
  * -------------------------------- */
@@ -722,4 +646,101 @@
   letter-spacing: 2px;
   font-size: 4rem;
   color: white;
+}
+
+/* --------------------------------
+ * blog-new page
+ * -------------------------------- */
+.blog_post {
+  ul{
+    display: table;
+    wight: 100px;
+    margin: auto;
+  }
+
+  li{
+    padding-top: 20px;
+    list-style:none;
+  }
+
+  &.title{
+    width: 600px;
+    opacity: 0.7;
+  }
+
+  &.content{
+	  text-align: left;
+    width: 600px;
+    height: 500px;
+    opacity: 0.7;
+  }
+
+  &.content2{
+    width: 600px;
+    height: 200px;
+    opacity: 0.7;
+  }
+
+}
+/* --------------------------------
+ * button
+ * -------------------------------- */
+ .btn{
+     margin: 10px 10px 20px 250px;
+     text-decoration: none;
+     background: #3FAF73;
+     color: #FFF;
+     width: 100px;
+     height: 100px;
+     line-height: 90px;
+     border-radius: 50%;
+     text-align: center;
+     vertical-align: middle;
+     overflow: hidden;
+     box-shadow: 0px 0px 0px 5px #3FAF73;
+     border: dashed 1px #FFF;
+     transition: .4s;
+ }
+
+ .btn:hover{
+     background: #B8FBD7;
+     box-shadow: 0px 0px 0px 5px #B8FBD7;
+ }
+
+/* --------------------------------
+ * footer
+ * -------------------------------- */
+.footer {
+  width: 100%;
+  padding: 20px 0 30px;
+  background: #2DA05D;
+  color: #fff;
+}
+.horizontal-list {
+  width: 970px;
+  margin: 0 auto;
+  text-align: right;
+  font-size: 0;
+}
+.horizontal-list .horizontal-item {
+  display: inline-block;
+  padding: 0 15px;
+  letter-spacing: 1px;
+}
+.horizontal-list .horizontal-item + .horizontal-item {
+  border-left: 1px solid #bbb;
+}
+.horizontal-list .horizontal-item a {
+  border-bottom: 1px dashed #777;
+  color: #bbb;
+  font-size: 1.1rem;
+  transition: color 0.15s;
+}
+.horizontal-list .horizontal-item a:hover {
+  color: #ddd;
+}
+.copyright {
+  margin-top: 30px;
+  text-align: center;
+  letter-spacing: 1px;
 }
