--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -32,7 +32,7 @@
       <%= form.hidden_field :image_cache %>
       <div class="preview"/>
     </li>
-      <%= form.submit :class=>"btn"%>
+      <%= form.submit :class=>"btn", :value=>"投稿する" %>
   </ul>
  <div>
 <% end %>
