--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -35,7 +35,7 @@
     </main>
 
     <div class="sidemenu">
-      <h2 class="heading">TODAY's RANKING</h2>
+      <h3 class="heading">オススメの投稿</h3>
       <ol class="ranking">
         <li class="ranking-item">
           <a href="#">
@@ -65,73 +65,7 @@
             <p class="text">HTML/CSSコーディングと切っても切れないWebブラウザのシェア動向をチェックしよう</p>
           </a>
         </li>
-        <li class="ranking-item">
-          <a href="#">
-            <img class="image" src="./images/ranking.jpg" alt="グラフの画像">
-            <span class="order"></span>
-            <p class="text">HTML/CSSコーディングと切っても切れないWebブラウザのシェア動向をチェックしよう</p>
-          </a>
-        </li>
-        <li class="ranking-item">
-          <a href="#">
-            <img class="image" src="./images/ranking.jpg" alt="グラフの画像">
-            <span class="order"></span>
-            <p class="text">HTML/CSSコーディングと切っても切れないWebブラウザのシェア動向をチェックしよう</p>
-          </a>
-        </li>
-        <li class="ranking-item">
-          <a href="#">
-            <img class="image" src="./images/ranking.jpg" alt="グラフの画像">
-            <span class="order"></span>
-            <p class="text">HTML/CSSコーディングと切っても切れないWebブラウザのシェア動向をチェックしよう</p>
-          </a>
-        </li>
       </ol>
-      <h2 class="heading">DOCUMENTS</h2>
-      <ul class="scroll-list">
-        <li class="scroll-item">
-          <a href="#">
-            <time class="date" datetime="2015-08-23">2015.08.23 SUN</time>
-            <span class="category news">NEWS</span>
-            <span class="title">WORKSを更新しました。</span>
-          </a>
-        </li>
-        <li class="scroll-item">
-          <a href="#">
-            <time class="date" datetime="2015-08-12">2015.08.12 WED</time>
-            <span class="category">TOPIC</span>
-            <span class="title">CSSでここまでできる！？ホントに使えるCSSセレクタ10選！</span>
-          </a>
-        </li>
-        <li class="scroll-item">
-          <a href="#">
-            <time class="date" datetime="2015-08-04">2015.08.04 TUE</time>
-            <span class="category news">NEWS</span>
-            <span class="title">TOPICSを更新しました。</span>
-          </a>
-        </li>
-        <li class="scroll-item">
-          <a href="#">
-            <time class="date" datetime="2015-07-25">2015.07.25 SAT</time>
-            <span class="category">TOPIC</span>
-            <span class="title">HTML/CSSコーディングと切っても切れないWebブラウザのシェア動向をチェックしよう</span>
-          </a>
-        </li>
-        <li class="scroll-item">
-          <a href="#">
-            <time class="date" datetime="2015-07-09">2015.07.09 THU</time>
-            <span class="category">TOPIC</span>
-            <span class="title">HTML5の新しい属性で手軽にフォームバリデーション</span>
-          </a>
-        </li>
-        <li class="scroll-item">
-          <a href="#">
-            <time class="date" datetime="2015-06-30">2015.06.30 TUE</time>
-            <span class="category news">NEWS</span>
-            <span class="title">WORKSを更新しました。</span>
-          </a>
-        </li>
-      </ul>
-      <ul class="documents">
+
     </div>
   </div>
