--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -9,25 +9,11 @@
         </div>
       </a>
 
-      <div class="clearfix">
-        <% @blogs.each do |blog| %>
-        <%= link_to blog, class: "article-box" do %>
-          <h3 class="title"><%= blog.title %></h3>
-          <p class="desc"><%= blog.content %></p>
-          <p class="desc"><%= blog.user.name%></p>
-          <time class="date"><%= l blog.created_at , format: :short %></time>
-          <div class="image">
-          <% if blog.image.present? %>
-            <td><%= image_tag blog.image, :size => "315x210"%></td>
-          <% else %>
-            <td><%= image_tag 'noimage.png' , :size => "315x210" %></td>
-          <% end %>
-          </div>
-        <% end %>
-        <% end %>
+      <div id="blogs">
+  　　  <%= render :partial => "blogs" %>
       </div>
-    </main>
 
+    </main>
     <div class="sidemenu">
       <h3 class="heading">オススメの投稿</h3>
       <ol class="ranking">
