--- a/app/views/users/show_follow.html.erb
+++ b/app/views/users/show_follow.html.erb
@@ -1,7 +1,7 @@
 <% @user.followings.each do |user| %>
 <table>
 <tr>
-  <td>  <%= user.username %> </td>
+  <td>  <%= user.name %> </td>
   <td><%= link_to '詳細', user_path(user) %></td>
 </tr>
 
