企業がブログを投稿できる機能を実装

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -32,3 +32,8 @@
 
 <%= link_to "パスワード更新", edit_user_registration_path %>
 <%= link_to "ユーザー情報更新", user_profile_user_path %>
+
+
+<% if @user.official_account == true %>
+    <%= link_to 'Show', official_accounts_path %>
+<% end %>
