--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,6 +32,9 @@
                 <%= link_to '新規投稿', new_blog_path %>
               </li>
               <li class="nav-item">
+                <%= link_to '企業ブログ', official_accounts_path %>
+              </li>
+              <li class="nav-item">
                 <%= link_to "マイページ", user_path(current_user.id) %>
               </li>
               <li class="nav-item">
