--- a/app/views/official_accounts/_form.html.erb
+++ b/app/views/official_accounts/_form.html.erb
@@ -11,7 +11,28 @@
     </div>
   <% end %>
 
-  <div class="actions">
-    <%= form.submit %>
-  </div>
+  <div class="blog_post">
+    <ul>
+      <li >
+        <%= form.text_field :title, class:'blog_post title',
+          placeholder:'タイトルを入力'
+        %>
+      </li>
+      <li >
+        <%= form.text_area :content_top, class:'blog_post content',
+          placeholder:'今日は何を勉強しましたか？'
+        %>
+      </li>
+      <li>
+        <%= form.text_area :content_middle, class:'blog_post content2',
+          placeholder:'本日のまとめをお願いします！'
+        %>
+      </li>
+      <li>
+        <%= form.file_field :image_top, id: :image_top%>
+        <div class="preview"/>
+      </li>
+        <%= form.submit :class=>"btn", :value=>"投稿する" %>
+    </ul>
+   <div>
 <% end %>
