--- a/app/views/official_accounts/index.html.erb
+++ b/app/views/official_accounts/index.html.erb
@@ -2,17 +2,31 @@
 
 <h1>Official Accounts Blog</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="wrapper clearfix">
+    <main class="main">
+      <% @official_accounts.each do |official_account| %>
+      <%= link_to official_account, class: "hot-topic clearfix" do %>
+        <div class="image">
+        <% if official_account.image_top.present? %>
+          <td><%= image_tag official_account.image_top, :size => "410x300"%></td>
+        <% else %>
+          <td><%= image_tag 'noimage.png' , :size => "410x300" %></td>
+        <% end %>
+        </div>
+        <div class="content">
+          <h3 class="title"><%= official_account.title %></h3>
+          <p class="desc"><%= official_account.content_top %></p>
+          <time class="date"><%= l official_account.created_at , format: :short %></time>
+        </div>
+    <% end %>
+    <% end %>
+    </main>
+</div>
 
+<table>
   <tbody>
     <% @official_accounts.each do |official_account| %>
       <tr>
-        <td><%= link_to 'Show', official_account %></td>
         <td><%= link_to 'Edit', edit_official_account_path(official_account) %></td>
         <td><%= link_to 'Destroy', official_account, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
