--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -98,6 +98,10 @@
       width: 1200px;
       margin: 30px auto 40px;
     }
+    .official-wrapper {
+      width: 1200px;
+      margin: 30px auto 40px;
+    }
 
     /* --------------------------------
      * main
@@ -106,6 +110,11 @@
       display: block;
       float: left;
       width: 820px;
+    }
+    .official-main {
+      display: block;
+      width: 820px;
+      margin: auto;
     }
     .hot-topic {
       display: block;
