--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -24,9 +24,8 @@
       <i class="about-icon right fa "></i>
       <div class="about-title">SCHOOL</div>
       <p class="about-text">
-        厳選されたスクールと提携しております。<br>
-        あなたに合ったスクールを<br>
-        見つけることができます。
+        企業やスクールの<br>
+        イベントをみることができます。
       </p>
     </div>
   </div>
