--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -19,12 +19,12 @@
     </li>
     <li >
       <%= form.text_area :content, class:'blog_post content',
-        placeholder:'今日は何を勉強しましたか？'
+        placeholder:'マークダウン形式でも入力できます。'
       %>
     </li>
     <li>
       <%= form.text_area :content2, class:'blog_post content2',
-        placeholder:'本日のまとめをお願いします！'
+        placeholder:'本日のまとめをお願いします。'
       %>
     </li>
     <li>
@@ -32,7 +32,7 @@
       <%= form.hidden_field :image_cache %>
       <div class="preview"/>
     </li>
-      <%= form.submit :class=>"btn", :value=>"投稿する" %>
+      <%= form.submit :class=>"btn" %>
   </ul>
  <div>
 <% end %>
