--- a/app/views/official_accounts/index.html.erb
+++ b/app/views/official_accounts/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h2 class="heading">Official Account's Events</h2>
+<h2 class="heading">イベント</h2>
 
 <div class="official-wrapper clearfix">
     <main class="official-main">
