--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,54 +1,39 @@
 <div class="wrapper clearfix">
     <main class="main">
-      <div id="blogs">
-      <%= render :partial => "blogs" %>
-      </div>
-    </main>
-    <div class="sidemenu">
-      <h3 class="heading">オススメの投稿</h3>
-        <li class="ranking-item">
-          <a href="#">
-            <img class="image" src="./images/ranking.jpg" alt="グラフの画像">
-            <span class="order"></span>
-            <p class="text">HTML/CSSコーディングと切っても切れないWebブラウザのシェア動向をチェックしよう</p>
-          </a>
-        </li>
-        <li class="ranking-item">
-          <a href="#">
-            <img class="image" src="./images/ranking.jpg" alt="グラフの画像">
-            <span class="order"></span>
-            <p class="text">HTML/CSSコーディングと切っても切れないWebブラウザのシェア動向をチェックしよう</p>
-          </a>
-        </li>
-        <li class="ranking-item">
-          <a href="#">
-            <img class="image" src="./images/ranking.jpg" alt="グラフの画像">
-            <span class="order"></span>
-            <p class="text">HTML/CSSコーディングと切っても切れないWebブラウザのシェア動向をチェックしよう</p>
-          </a>
-        </li>
-        <li class="ranking-item">
-          <a href="#">
-            <img class="image" src="./images/ranking.jpg" alt="グラフの画像">
-            <span class="order"></span>
-            <p class="text">HTML/CSSコーディングと切っても切れないWebブラウザのシェア動向をチェックしよう</p>
-          </a>
-        </li>
-      </ol>
-      <div class="search">
-        <%= search_form_for @search do |f| %>
-          <%= f.label :title_cont, 'タイトル' %>
-          <%= f.text_field :title_cont %>
-          <br />
-        <%= f.label :created_at, '作成日' %>
-        <%= f.date_select :created_at_gteq, include_blank: true %>〜
-        <%= f.date_select :created_at_lteq, include_blank: true %>
-        <%= f.label :user, 'ユーザー' %>
-        <%= f.text_field :user_name_cont %>
-          <div>
-            <%= f.submit '検索する' %>
+        <article>
+          <div class="contents">
+            <ul class="row">
+            <% @blogs.each do |blog| %>
+              <div class="PhotoBox" class="col-sm-6 col-md-3">
+                 <%= image_tag(blog.image_url) if blog.image.present?%>
+                 <div class="SlideBox">
+                    <p class="Caption"><%= blog.content %></p>
+                    <ul class="Caption2">
+                    <li class="Caption2">name:<%= blog.user.name%></li>
+                    <li class="Caption2">
+                      <time datetime="<%= blog.created_at %>">
+                      <%= time_ago_in_words(blog.created_at) %> ago
+                      </time>
+                    </li>
+                    </ul>
+                    <li class="Caption"><button type="button" class="btn btn-default btn-circle">
+                    <%= link_to 'more', blog_path(blog.id) %></button></li>
+                    <% if current_user.present? %>
+                      <% if blog.user_id == current_user.id %>
+                      <li class="Caption"><button type="button" class="btn btn-danger btn-circle">
+                        <%= link_to 'del', blog_path(blog.id),method: :delete ,data: { confirm: '本当に削除していいですか？' } %></button></li>
+                      <li class="Caption"><button type="button" type="button" class="btn btn-warning btn-circle">
+                        <%= link_to 'Edit', edit_blog_path(blog.id),data: { confirm: '本当に編集していいですか？' } %></button></li>
+                      <% end %>
+                    <% end %>
+                 </div>
+              </div>
+            <% end %>
+            </ul>
           </div>
-        <% end %>
-      </div>
-    </div>
+        </article>
+    </main>
   </div>
+</div>
+
+<%= paginate @blogs %>
