--- a/app/views/users/_follow_form.html.erb
+++ b/app/views/users/_follow_form.html.erb
@@ -1,3 +1,4 @@
+<h2 class="heading">フォローとフォロワー</h2>
 <% unless current_user?(@user) %>
  <div id="follow_form">
  <% if current_user.following?(@user) %>
@@ -6,4 +7,4 @@
    <%= render 'follow' %>
  <% end %>
  </div>
-<% end %>  
+<% end %>
